# swig-issue-2020-09

./: .gitignore
src/: A.h  A.i  CMakeLists.txt
